added a bit of keycloak user management
