# application/domain/src/main/java/sk/posam/fsa/statstracker/domain/UserManagementPort.java
@@ -1,0 +1,5 @@
+package sk.posam.fsa.statstracker.domain;
+
+public interface UserManagementPort {
+    void createUser(String email, String password);
+}
