# application/domain/src/main/java/sk/posam/fsa/statstracker/domain/service/UserManagementFacade.java
@@ -1,0 +1,5 @@
+package sk.posam.fsa.statstracker.domain.service;
+
+public interface UserManagementFacade {
+    void createUser(String email, String password);
+}
